--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -8,11 +8,12 @@
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Página de receita</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div id="page"> 
-        <img src="" alt="">
+        <img src="assets/main-image.png" alt="Imagem de cupcakes">
         <main>
             <section id="about">
                 <h1>Cupacake de café com chantilly</h1>
