adicionando imagem do rodapé

--- a/index.html
+++ b/index.html
@@ -58,5 +58,8 @@
             </section>
         </main>
     </div>
+    <footer>Feito pela 
+        <img src="assets/ph_heart-fill.svg" alt="">
+        Rocketseat</footer>
 </body>
 </html>
